--- a/style.css
+++ b/style.css
@@ -194,15 +194,9 @@ th {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
-* {
-  -webkit-box-sizing: border-box;
+*, *:before, *:after {
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-*:before,
-*:after {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 html {
@@ -216,15 +210,7 @@ body {
   color: #333333;
   background-color: #6f5499;
 }
-.container {
-  width: 500px;
-  margin: 0 auto;
-  background-color: #ffffff;
-  padding: 25px;
-  border: 1px solid #707070;
-  margin-top: 45px;
-  border-radius: 4px;
-}
+
 .title {
   text-align: center;
   color: #6f5499;
@@ -287,7 +273,37 @@ button[type="submit"]:hover {
 }
 
 
-
+/* ========================================= *\
+    Responsive
+\* ========================================= */
+/* Small screens (default) */
+html { font-size: 100%; }
+.container {
+  margin: 0 auto;
+  max-width: 48rem;
+  width: 90%;
+  background-color: #ffffff;
+  padding: 15px;
+  border: 1px solid #707070;
+  margin-top: 25px;
+  border-radius: 4px;
+} 
+/* Medium screens (640px) */
+@media (min-width: 40rem) { 
+  html { font-size: 112%; }
+  .container {
+    width: 60%;
+    padding: 25px;
+  }
+}
+ 
+/* Large screens (1024px) */
+@media (min-width: 64rem) { 
+  html { font-size: 120%; }
+  .container {
+    width: 50%;
+  }
+}
 
 
 
